<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2026 Ryuusuke Azuma All Rights Reserved.
  -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_data_management">
        <Preference
            app:key="pref_import"
            app:title="@string/pref_title_import"
            app:summary="@string/pref_summary_import" />
        <Preference
            app:key="pref_export"
            app:title="@string/pref_title_export"
            app:summary="@string/pref_summary_export" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="cat_debug"
        app:title="@string/pref_category_debug">
        <SwitchPreferenceCompat
            app:key="pref_debug_mode"
            app:title="@string/pref_title_debug_mode"
            app:summary="@string/pref_summary_debug_mode"
            app:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>
