<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2026 Ryuusuke Azuma All Rights Reserved.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/ic_analytics"
            android:title="@string/menu_analytics" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
    </group>

</menu>
