<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2026 Ryuusuke Azuma All Rights Reserved.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/analytics_loss_distribution"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart_analytics_loss_distribution"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:stretchColumns="*">

        <TableRow>
            <TextView
                android:padding="8dp"
                android:text=""
                android:textStyle="bold" />
            <TextView
                android:padding="8dp"
                android:text="@string/analytics_label_loss_rate"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>
            <TextView
                android:padding="8dp"
                android:text="@string/analytics_label_first"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/text_first_loss_rate"
                android:padding="8dp"
                android:text="@string/analytics_label_no_data_hyphen" />
        </TableRow>

        <TableRow>
            <TextView
                android:padding="8dp"
                android:text="@string/analytics_label_second"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/text_second_loss_rate"
                android:padding="8dp"
                android:text="@string/analytics_label_no_data_hyphen" />
        </TableRow>

    </TableLayout>

</LinearLayout>
