<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2026 Ryuusuke Azuma All Rights Reserved.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedule_label_game_style" />

        <RadioGroup
            android:id="@+id/radio_group_game_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_game_style_neos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/schedule_label_singles" />

            <RadioButton
                android:id="@+id/radio_game_style_trio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_label_teams" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_game_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/schedule_hint_game_name"
            app:endIconDrawable="@drawable/ic_arrow_drop_down"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_game_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/schedule_hint_game_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_game_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/schedule_hint_memo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_game_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>
