<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2026 Ryuusuke Azuma All Rights Reserved.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/layout_summary_total_games"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/divider_summary_1"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/analytics_total_games"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/text_summary_total_games"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="12" />
                </LinearLayout>

                <View
                    android:id="@+id/divider_summary_1"
                    android:layout_width="2dp"
                    android:layout_height="24dp"
                    android:background="#BDBDBD"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/layout_summary_total_scores"
                    app:layout_constraintStart_toEndOf="@+id/layout_summary_total_games"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/layout_summary_total_scores"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/layout_summary_total_wins"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/divider_summary_1"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/analytics_total_scores"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/text_summary_total_scores"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="48" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_summary_total_wins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/layout_summary_total_losses"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/layout_summary_total_scores"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/analytics_label_win"
                        android:textColor="@color/result_win_blue"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/text_summary_total_wins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/result_win_blue"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="30" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_summary_total_losses"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/layout_summary_total_wins"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/analytics_label_lose"
                        android:textColor="@color/result_lose_red"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/text_summary_total_losses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/result_lose_red"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="18" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analytics_individual_detail"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginBottom="32dp">
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart_summary_individual_outer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart_summary_individual_inner"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analytics_teams_detail"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginBottom="24dp">
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart_summary_teams_outer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart_summary_teams_inner"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

    </LinearLayout>
</ScrollView>
